# sdp-detection-pipeline

./: .gitignore  README.md  cli.py  io.py  modeling.py  pipeline.py  pyproject.toml  setup.py  visualization.py
examples/ring-hydroxylating_dioxygenase/: example-ring-hydroxylating-dioxygenase.ipynb  pf00848-metadata.tsv
sdp_detection_pipeline/: __init__.py  preprocessing.py  visualization.py
tests/: conftest.py  test_io.py  test_modeling.py  test_pipeline.py  test_preprocessing.py  test_visualization.py
